--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -71,26 +71,26 @@
   <main>
     <section>
       <h2>👥 ¿Quiénes somos?</h2>
-      <p>EPIDENGIS CALI es un proyecto académico desarrollado por estudiantes de la Universidad del Valle, con el propósito de integrar herramientas de análisis geoespacial para la vigilancia epidemiológica del dengue en la ciudad de Santiago de Cali.</p>
+      <p><strong>EPIDENGIS CALI</strong> es un proyecto académico desarrollado por estudiantes de la Universidad del Valle, orientado a integrar herramientas de análisis geoespacial en la vigilancia epidemiológica del dengue en Santiago de Cali. Utilizando tecnologías SIG, buscamos aportar a la comprensión territorial del fenómeno, visualizando datos claves para la toma de decisiones en salud pública.</p>
     </section>
 
     <section>
       <h2>🎯 Misión</h2>
-      <p>Desarrollar soluciones digitales basadas en Sistemas de Información Geográfica (SIG) para fortalecer la toma de decisiones en salud pública, aportando a la prevención y control del dengue en zonas urbanas vulnerables de Cali.</p>
+      <p>Desarrollar soluciones digitales basadas en Sistemas de Información Geográfica (SIG) que fortalezcan la gestión de riesgo en salud pública, especialmente en zonas vulnerables afectadas por el dengue en Cali.</p>
     </section>
 
     <section>
       <h2>🔭 Visión</h2>
-      <p>Consolidarnos como una iniciativa académica pionera en el uso de tecnologías geoespaciales para la vigilancia epidemiológica, promoviendo la articulación entre comunidad, academia y autoridades locales.</p>
+      <p>Ser una referencia académica y técnica en el uso de SIG para el análisis epidemiológico, promoviendo metodologías replicables en otras regiones del país y articulando saberes entre comunidad, academia y Estado.</p>
     </section>
 
     <section>
       <h2>🎯 Objetivos</h2>
       <ul>
-        <li>Visualizar la distribución espacial de los casos de dengue en Cali.</li>
-        <li>Identificar zonas críticas mediante herramientas SIG.</li>
-        <li>Apoyar procesos de prevención desde una perspectiva territorial.</li>
-        <li>Fortalecer el trabajo colaborativo e interdisciplinario en salud y geografía.</li>
+        <li>Visualizar la distribución espacial de los casos de dengue en Cali mediante un geovisor interactivo.</li>
+        <li>Identificar zonas críticas a partir del análisis de datos ambientales, urbanos y epidemiológicos.</li>
+        <li>Fomentar el uso de datos abiertos y ciencia ciudadana para mejorar la vigilancia del dengue.</li>
+        <li>Fortalecer el aprendizaje académico de herramientas SIG y su aplicación a problemas reales.</li>
       </ul>
     </section>
 
@@ -101,7 +101,7 @@
         <li>Responsabilidad social y académica</li>
         <li>Transparencia en el uso de datos</li>
         <li>Innovación tecnológica</li>
-        <li>Interdisciplinariedad</li>
+        <li>Interdisciplinariedad y trabajo colaborativo</li>
       </ul>
     </section>
 
@@ -113,12 +113,13 @@
         <li>Juan Daniel Jaramillo</li>
         <li>Johan Camilo Ramírez</li>
       </ul>
-      <p>Estudiantes del curso “Diseño de Proyectos en SIG”, Universidad del Valle.</p>
+      <p>Estudiantes del curso <em>Diseño de Proyectos en SIG</em> – Universidad del Valle.</p>
     </section>
 
     <section>
       <h2>🎓 Apoyo institucional</h2>
-      <p>Este proyecto se enmarca en el programa de Ingeniería Topográfica de la Universidad del Valle, bajo la orientación del profesor Robin Alexis Olaya.</p>
+      <p>Este proyecto se desarrolla en el marco del programa de Ingeniería Topográfica de la Universidad del Valle, bajo la orientación académica del profesor <strong>Robin Alexis Olaya</strong>.</p>
+      <p>EPIDENGIS CALI es una iniciativa sin fines comerciales y forma parte de las estrategias de formación en cartografía temática, georreferenciación y gestión del riesgo en salud.</p>
     </section>
   </main>
 
