--- a/geovisor.html
+++ b/geovisor.html
@@ -1,1 +1,90 @@
-<!DOCTYPE html><html><head><title>Geovisor</title></head><body><h1>Geovisor en construcción</h1></body></html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="utf-8"/>
+  <title>Geovisor | EPIDENGIS CALI</title>
+  <link href="css/styles.css" rel="stylesheet"/>
+  
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #ffffff;
+      color: #003366;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      background-color: #005eb8;
+      color: white;
+      padding: 1em;
+    }
+    .logo {
+      width: 80px;
+    }
+    nav button {
+      margin: 0 10px;
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    nav button:hover {
+      background-color: #0056b3;
+    }
+    main {
+      padding: 40px 5% 20px 5%;
+      text-align: justify;
+      max-width: 960px;
+      margin: auto;
+    }
+    h2 {
+      color: #005eb8;
+      text-align: center;
+    }
+    ul {
+      list-style-type: disc;
+      padding-left: 2em;
+    }
+    footer {
+      background-color: #003366;
+      color: white;
+      padding: 10px;
+      text-align: center;
+    }
+    img {
+      max-width: 90%;
+      height: auto;
+      margin: 20px auto;
+      display: block;
+    }
+  </style>
+
+</head>
+<body>
+  
+  <header>
+    <img alt="Logo EPIDENGIS" class="logo" src="assets/Logo_sig_dengue_EPIDENGIS.png"/>
+    <h1>EPIDENGIS CALI</h1>
+    <nav>
+      <button onclick="location.href='index.html'">Home</button>
+      <button onclick="location.href='geovisor.html'">Geovisor</button>
+      <button onclick="location.href='tablero.html'">Tablero de Control</button>
+      <button onclick="location.href='metodologia.html'">Metodología</button>
+      <button onclick="location.href='contacto.html'">Contáctanos</button>
+      <button onclick="location.href='quienes_somos.html'">¿Quiénes somos?</button>
+    </nav>
+  </header>
+
+  <main>
+    <h2>🗺️ Geovisor Interactivo</h2>
+    <p>Este geovisor permite explorar la distribución espacial de los casos de dengue en Cali durante los años 2014, 2015 y 2016. Se integran capas de sumideros, drenajes pluviales y variables climáticas (humedad, temperatura y precipitación) en formato ráster, con el fin de identificar zonas críticas y apoyar decisiones en salud pública.</p>
+  </main>
+
+  <footer>
+    <p>© 2025 EPIDENGIS CALI - Universidad del Valle. Proyecto académico sin fines comerciales.</p>
+  </footer>
+
+</body>
+</html>
