Geoportal SIG dengue

--- a/metodologia.html
+++ b/metodologia.html
@@ -106,7 +106,9 @@
       <button onclick="location.href='index.html'">Inicio</button>
       <button onclick="location.href='geovisor.html'">Geovisor</button>
       <button onclick="location.href='tablero.html'">Tablero de Control</button>
+      <button onclick="location.href='metodologia.html'">Metodología</button>
       <button onclick="location.href='contacto.html'">Contáctanos</button>
+      <button onclick="location.href='quienes_somos.html'">¿Quiénes somos?</button>
     </nav>
   </header>
 
