--- a/metodologia.html
+++ b/metodologia.html
@@ -103,7 +103,7 @@
     <img alt="Logo EPIDENGIS" class="logo" src="assets/Logo_sig_dengue_EPIDENGIS.png"/>
     <h1>EPIDENGIS CALI</h1>
     <nav>
-      <button onclick="location.href='index.html'">Inicio</button>
+      <button onclick="location.href='index.html'">Home</button>
       <button onclick="location.href='geovisor.html'">Geovisor</button>
       <button onclick="location.href='tablero.html'">Tablero de Control</button>
       <button onclick="location.href='metodologia.html'">Metodología</button>
