--- a/tablero.html
+++ b/tablero.html
@@ -59,6 +59,10 @@
       margin: 20px auto;
       display: block;
     }
+    iframe {
+      border: none;
+      margin-top: 20px;
+    }
   </style>
 
 </head>
@@ -79,7 +83,15 @@
 
   <main>
     <h2>📊 Tablero de Control</h2>
-    <p>Esta sección presentará indicadores clave sobre el dengue en Cali, incluyendo estadísticas por comuna, evolución temporal y relación con variables ambientales. Será una herramienta útil para la visualización y monitoreo dinámico.</p>
+    <p>Esta sección presenta indicadores clave sobre el dengue en Cali, incluyendo estadísticas por comuna, evolución temporal y relación con variables ambientales. Es una herramienta útil para la visualización y monitoreo dinámico.</p>
+
+    <iframe 
+      src="https://www.arcgis.com/apps/dashboards/6ba9d4c37d3f4a11a3e9cf5c9d924f08" 
+      width="100%" 
+      height="800px" 
+      allowfullscreen 
+      title="Tablero de Control EPIDENGIS">
+    </iframe>
   </main>
 
   <footer>
