--- a/geovisor.html
+++ b/geovisor.html
@@ -142,9 +142,11 @@
 </header>
 
 <main>
-
-  <div id="map-title">
-    <img src="img/logo.png" alt="Logo institucional" id="logo-in-title">
+<h2>🗺️ Geovisor Interactivo</h2>
+    <p>Este geovisor permite explorar la distribución espacial de los casos de dengue en Cali durante los años 2014, 2015 y 2016. Se integran capas de sumideros, drenajes pluviales y variables climáticas (humedad, temperatura y precipitación) en formato ráster, con el fin de identificar zonas críticas y apoyar decisiones en salud pública.</p>
+  </main>
+<div id="map-title">
+   
     Geovisor EpidenGIS Cali
   </div>
   <div id="map"></div>
